made eval public, implemented idea suggestion